# adverse-media-screening

./: .gitignore  Makefile  PART_2_ENRICHMENT_PLAN.md  README.md  package-lock.json
.github/workflows/: ci.yml
docker/: ai.Dockerfile  ai.entrypoint.sh  docker-compose.yml  web.Dockerfile
scripts/: setup.sh
services/ai/: .env.defaults  .env.example  .gitignore  pyproject.toml
services/ai/app/: config.py  dependencies.py  factory.py
services/ai/app/models/: articles.py  forms.py  llm_metadata.py
services/ai/app/routes/: __init__.py  screening.py  test.py  utils.py
services/ai/app/services/: llm_factory.py  pipeline.py  screening_pipeline.py
services/ai/app/services/credibility/: analyser.py  models.py  prompt.py
services/ai/app/services/extraction/: llm.py  models.py  prompt.py
services/ai/app/services/matching/: __init__.py  matcher.py  models.py  prompt.py  utils.py
services/ai/app/services/results/: __init__.py  models.py  storage.py
services/ai/app/services/screening/: __init__.py  models.py
services/ai/app/services/sentiment/: __init__.py  analyser.py  models.py  prompt.py
services/ai/app/utils/: logger.py  scraping.py
services/ai/results/: index.json
services/ai/results/data/: 2f189087-200f-4d9e-b602-cfecce749b97.json  3fbac552-287a-4717-9607-b9e254e0a581.json  7e8671cc-9367-4cf9-b35e-98093dc2f657.json  d30745ae-0f55-4922-9399-692f460f5ca6.json
services/web/: .dockerignore  .env  .env.defaults  .gitignore  package-lock.json  package.json
services/web/src/: env.js
src/app/: page.tsx
src/server/api/: root.ts
(+25 files in other folders)
